[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1"]

[node name="CharacterSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 24
custom_constants/margin_top = 24
custom_constants/margin_right = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
text = "Select a particle archetype to begin."
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
size_flags_horizontal = 3

[node name="ClassList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_constants/separation = 12
size_flags_horizontal = 3
